--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/5SEM-KMS",
+  "homepage": "https://EugeneAlWin.github.io/5SEM-KMS",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
